Added missing reference and doi
Added reference to Erhardt et al (2019) and doi for those without

--- a/NGRIP_datinguncertainty/README.Rmd
+++ b/NGRIP_datinguncertainty/README.Rmd
@@ -93,22 +93,24 @@ Capron, E., Rasmussen, S. O., Popp, T. J., Erhardt, T., Fischer, H., Landais, A.
 Svensson, A., Vinther, B. M., and White, J. W.: The anatomy of past abrupt warmings recorded in Greenland ice, Nature Communications,
 12, https://doi.org/10.1038/s41467-021-22241-w, 2021.
 
+Erhardt, T., Capron, E., Rasmussen, S.O., Schüpbach, S., Bigler, M., Adolphi, F., and Fischer, H.: Decadal-scale progression of the onset of Dansgaard-Oeschger warming events, Climate of the Past, 15, 811-825, https://doi.org/10.5194/cp-15-811-2019, 2019.
+
 Gkinis, V., Simonsen, S. B., Buchardt, S. L., White, J. W., and Vinther, B. M.: Water isotope diffusion rates from the NorthGRIP ice core for the last 16,000 years - Glaciological and paleoclimatic implications, Earth and Planetary Science Letters, 405, 132–141,
 https://doi.org/10.1016/j.epsl.2014.08.022, 2014.
 
 Muscheler, R., Adolphi, F., Heaton, T., Bronk Ramsey, C., Svensson, A., Van der Plicht, J., & Reimer, P. (2020). Testing and Improving the IntCal20 Calibration Curve with Independent Records. Radiocarbon, 62(4), 1079-1094. doi:10.1017/RDC.2020.54
 
-Myrvoll-Nilsen, E., Riechers, K., Rypdal, M. & Boers, N. (2022). Comprehensive uncertainty estimation of the timing of Greenland warmings of the Greenland Ice core records. Climate of the Past, 18, 1275-1294. doi.org/10.5194/cp-18-1275-2022
+Myrvoll-Nilsen, E., Riechers, K., Rypdal, M. & Boers, N.: Comprehensive uncertainty estimation of the timing of Greenland warmings of the Greenland Ice core records. Climate of the Past, 18, 1275-1294. https://doi.org/10.5194/cp-18-1275-2022, 2022
 
 North Greenland Ice Core Project members: High-resolution record of Northern Hemisphere climate extending into the last interglacial
 period, Nature, 431, 147–151, https://doi.org/10.1038/nature02805, 2004.
 
 Rasmussen, S. O., Bigler, M., Blockley, S. P., Blunier, T., Buchardt, S. L., Clausen, H. B., Cvijanovic, I., Dahl-Jensen, D., Johnsen, S. J., Fischer, H., Gkinis, V., Guillevic, M., Hoek, W. Z., Lowe, J. J., Pedro, J. B., Popp, T., Seierstad, I. K., Steffensen, J. P., Svensson, A. M., Vallelonga, P., Vinther, B. M., Walker, M. J., Wheatley, J. J., and Winstrup, M.: A stratigraphic framework for abrupt climatic changes during the Last Glacial period based on three synchronized Greenland ice-core records: refining and extending the INTIMATE event stratigraphy, Quaternary Science Reviews, 106, 14–28, https://doi.org/https://doi.org/10.1016/j.quascirev.2014.09.007, dating, Synthesis, and Interpretation of Palaeoclimatic Records and Model-data Integration: Advances of the INTIMATE project(INTegration of Ice core, Marine and TErrestrial records, COST Action ES0907), 2014.
 
-Rue, H., Martino, S., and Chopin, N.: Approximate Bayesian inference for latent Gaussian models using integrated nested Laplace approximations (with discussion)., J R Stat Soc Series B, 71, 319–392, 2009.
+Rue, H., Martino, S., and Chopin, N.: Approximate Bayesian inference for latent Gaussian models using integrated nested Laplace approximations (with discussion)., J R Stat Soc Series B, 71, 319–392,  https://doi.org/10.1111/j.1467-9868.2008.00700.x, 2009.
 
-Rue, H., Riebler, A., Sørbye, S. H., Illian, J. B., Simpson, D. P., and Lindgren, F. K.: Bayesian Computing with INLA: A Review, Annu. Rev. Stat. Appl., 4, 395–421, 2017.
+Rue, H., Riebler, A., Sørbye, S. H., Illian, J. B., Simpson, D. P., and Lindgren, F. K.: Bayesian Computing with INLA: A Review, Annu. Rev. Stat. Appl., 4, 395–421, https://doi.org/10.1146/annurev-statistics-060116-054045, 2017.
 
 
-Ruth, U., Wagenbach, D., Steffensen, J. P., and Bigler, M. (2003), Continuous record of microparticle concentration and size distribution in the central Greenland NGRIP ice core during the last glacial period, J. Geophys. Res., 108, 4098, doi:10.1029/2002JD002376, D3.
+Ruth, U., Wagenbach, D., Steffensen, J. P., and Bigler, M.: Continuous record of microparticle concentration and size distribution in the central Greenland NGRIP ice core during the last glacial period, J. Geophys. Res., 108, 4098, https://doi:10.1029/2002JD002376, D3, 2003.
 
